telemetry/derive/tests/ui_fail/not_return_result.stderr
error: Should return `Result`. Found MyNotResult
 --> tests/ui_fail/not_return_result.rs:7:54
  |
7 | fn execute(_state_transaction: &StateTransaction) -> MyNotResult {
  |                                                      ^^^^^^^^^^^
